--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,22 +16,22 @@
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
     <!-- Theme style -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/dist/css/AdminLTE.min.css}" />
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/dist/css/AdminLTE.min.css}" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/dist/css/skins/_all-skins.min.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/dist/css/skins/_all-skins.min.css}"/>
     <!-- iCheck -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/plugins/iCheck/flat/blue.css}" />
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/iCheck/flat/blue.css}" />
     <!-- Morris chart -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/plugins/morris/morris.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/morris/morris.css}"/>
     <!-- jvectormap -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css}"/>
     <!-- Date Picker -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/plugins/datepicker/datepicker3.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/datepicker/datepicker3.css}"/>
     <!-- Daterange picker -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/plugins/daterangepicker/daterangepicker.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/daterangepicker/daterangepicker.css}"/>
     <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" th:href="@{~/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css}"/>
 
     <style>
         .invoice-table span.label {
