--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,7 +16,7 @@
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
     <!-- Theme style -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/dist/css/AdminLTE.min.css}" />
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/dist/css/AdminLTE.css}" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" th:href="@{/vendor/AdminLTE/dist/css/skins/_all-skins.min.css}"/>
@@ -31,7 +31,7 @@
     <!-- Daterange picker -->
     <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/daterangepicker/daterangepicker.css}"/>
     <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.css}"/>
 
     <style>
         .invoice-table span.label {
