--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,20 +10,20 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
     <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" th:href="@{~/vendor/bootstrap/dist/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{~/vendor/bootstrap/dist/css/bootstrap.css}" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
     <!-- Theme style -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/dist/css/AdminLTE.css}" />
+    <link rel="stylesheet" th:href="@{/vendor/Theme/css/admin.min.css}" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/dist/css/skins/_all-skins.min.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/Theme/css/skins.min.css}"/>
     <!-- iCheck -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/iCheck/flat/blue.css}" />
+    <link rel="stylesheet" th:href="@{/vendor/Theme/css/iCheckblue.css}" />
     <!-- Morris chart -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/morris/morris.css}"/>
+    <link rel="stylesheet" th:href="@{/vendor/Theme/css/morris.min.css}"/>
     <!-- jvectormap -->
     <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css}"/>
     <!-- Date Picker -->
