--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,9 +9,7 @@
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Billing</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
-    <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" th:href="@{~/vendor/bootstrap/dist/css/bootstrap.css}" />
-    <!-- Font Awesome -->
+        <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
@@ -21,7 +19,7 @@
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" th:href="@{/vendor/Theme/css/skins.min.css}"/>
     <!-- iCheck -->
-    <link rel="stylesheet" th:href="@{/vendor/Theme/css/iCheckblue.css}" />
+    <link rel="stylesheet" th:href="@{/vendor/Theme/css/iCheckBlue.css}" />
     <!-- Morris chart -->
     <link rel="stylesheet" th:href="@{/vendor/Theme/css/morris.min.css}"/>
     <!-- jvectormap -->
@@ -32,6 +30,7 @@
     <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/daterangepicker/daterangepicker.css}"/>
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <style>
         .invoice-table span.label {
@@ -79,6 +78,9 @@
         <strong>Copyright &copy; 2016 All rights reserved.</strong>
     </footer>
 </div>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- ./wrapper -->
 
 <!-- jQuery 2.2.0 -->
@@ -94,7 +96,6 @@
 <script>
   $.widget.bridge('uibutton', $.ui.button);
 </script>
-<script th:src="@{/vendor/bootstrap/dist/js/bootstrap.min.js}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 <script th:src="@{/vendor/AdminLTE/plugins/morris/morris.min.js}"></script>
 <script th:src="@{/vendor/AdminLTE/plugins/sparkline/jquery.sparkline.min.js}"></script>
