--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -108,9 +108,9 @@
 <script th:src="@{/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js}"></script>
 <script th:src="@{/vendor/AdminLTE/plugins/slimScroll/jquery.slimscroll.min.js}"></script>
 <script th:src="@{/vendor/AdminLTE/plugins/fastclick/fastclick.js}"></script>
-<script th:src="@{/vendor/AdminLTE/dist/js/app.min.js}"></script>
-<script th:src="@{/vendor/AdminLTE/dist/js/pages/dashboard.js}"></script>
-<script th:src="@{/vendor/AdminLTE/dist/js/demo.js}"></script>
+<script th:src="@{/vendor/Theme/js/app.min.js}"></script>
+<script th:src="@{/vendor/Theme/js/dashboard.js}"></script>
+<script th:src="@{/vendor/Theme/js/demo.js}"></script>
 <script type="text/javascript" layout:fragment="custom-javascript"></script>
 </body>
 </html>
