InsuranceCompany begin aan validatie

--- a/src/main/resources/templates/fragments/alert.html
+++ b/src/main/resources/templates/fragments/alert.html
@@ -7,7 +7,7 @@
         <h4 th:text="${header}">Alert header</h4>
         <!--/* 'layout:fragment' attribute defines a replaceable content section */-->
         <th:block layout:fragment="alert-content">
-            <p>Default alert content</p>
+            <p>Controlleer alle velden en probeer het opnieuw</p>
         </th:block>
     </div>
 </th:block>
