--- a/src/main/resources/templates/insurance_company/edit.html
+++ b/src/main/resources/templates/insurance_company/edit.html
@@ -32,7 +32,7 @@
                         <input type="hidden" th:field="*{id}"/>
 
                         <div th:if="${#fields.hasErrors('*')}">
-                            <div layout:include="views/fragments/alert :: alert" th:with="type='danger', header='Fouten in het formulier'" th:remove="tag">
+                            <div layout:include="fragments/alert :: alert" th:with="type='danger', header='Fouten in het formulier'" th:remove="tag">
                                 <!--/* Implements alert summary fragment with full-blown HTML summary */-->
                                 <th:block layout:fragment="alert-summary">
                                     <p>Niet alle velden in het formulier zijn correct ingevuld. Corrigeer deze en verzend opnieuw.</p>
@@ -51,7 +51,7 @@
                         </div>
 
                         <div th:if="${exception}">
-                            <div layout:include="views/fragments/alert :: alert" th:with="type='danger', header='Fouten in het formulier'" th:remove="tag">
+                            <div layout:include="fragments/alert :: alert" th:with="type='danger', header='Fouten in het formulier'" th:remove="tag">
                                 <!--/* Implements alert summary fragment with full-blown HTML summary */-->
                                 <th:block layout:fragment="alert-summary">
                                     <p th:text="${exception}">Exception message</p>
