Added invoice pdf downloader

--- a/src/main/resources/templates/invoice/index.html
+++ b/src/main/resources/templates/invoice/index.html
@@ -131,6 +131,8 @@
                                     <a th:href="@{'/invoice/delete/' + ${invoice.id}}" class="btn btn-xs btn-danger"><span class="fa fa-trash"></span></a>
                                     <a th:href="@{'/invoice/print/' + ${invoice.id}}"
                                        class="btn btn-xs btn-primary"><span class="fa fa-download"></span></a>
+                                    <a th:href="@{'/invoice/download/' + ${invoice.id}}"
+                                       class="btn btn-xs btn-primary"><span class="fa fa-download"></span></a>
                                 </div>
                             </td>
                         </tr>
