Toevoeging custom validatiemessages, views voorbereidt op validatie, validatie ingebouwd voor user en vat

--- a/src/main/resources/templates/insurance/edit.html
+++ b/src/main/resources/templates/insurance/edit.html
@@ -32,7 +32,7 @@
                         <input type="hidden" th:field="*{id}"/>
 
                         <div th:if="${#fields.hasErrors('*')}">
-                            <div layout:include="views/fragments/alert :: alert" th:with="type='danger', header='Fouten in het formulier'" th:remove="tag">
+                            <div layout:include="fragments/alert :: alert" th:with="type='danger', header='There are errors in the form'" th:remove="tag">
                                 <!--/* Implements alert summary fragment with full-blown HTML summary */-->
                                 <th:block layout:fragment="alert-summary">
                                     <p>Niet alle velden in het formulier zijn correct ingevuld. Corrigeer deze en verzend opnieuw.</p>
