--- a/src/main/resources/templates/fragments/alert.html
+++ b/src/main/resources/templates/fragments/alert.html
@@ -7,7 +7,7 @@
         <h4 th:text="${header}">Alert header</h4>
         <!--/* 'layout:fragment' attribute defines a replaceable content section */-->
         <th:block layout:fragment="alert-content">
-            <p>Controlleer alle velden en probeer het opnieuw</p>
+            <p>Some fields have wrong or missing information. Please fix them before continuing...</p>
         </th:block>
     </div>
 </th:block>
