--- a/src/main/resources/templates/fragments/main-sidebar.html
+++ b/src/main/resources/templates/fragments/main-sidebar.html
@@ -58,6 +58,11 @@
                 <i class="fa fa-gear"></i> <span>Settings</span>
             </a>
         </li>
+        <li th:class="${page == 'news'} ? 'active' : ''">
+            <a th:href="@{~/news}">
+                <i class="fa fa-newspaper-o"></i> <span>News</span>
+            </a>
+        </li>
 
 
     </ul>
