Validationmessages vertaald, custom validators toegevoegd, insurancecompany validatie helemaal werkend

--- a/src/main/resources/templates/insurance_company/edit.html
+++ b/src/main/resources/templates/insurance_company/edit.html
@@ -101,7 +101,7 @@
                                 <div class="form-group">
                                     <label for="phoneNumber">Phone Number</label>
                                     <!-- th:field="*{name}" is de koppeling naar het attribuut 'name' van het object 'member'-->
-                                    <input type="number" class="form-control" id="phoneNumber" th:field="*{phoneNumber}"/>
+                                    <input type="text" class="form-control" id="phoneNumber" th:field="*{phoneNumber}"/>
                                     <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Name Error</p>
                                 </div>
 
