--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -24,6 +24,14 @@
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body">
+                    <div th:if="${exception}" style="flex: 1; margin: 0 30px;">
+                        <div layout:include="fragments/alert :: alert" th:with="type='error', header='exception'" th:remove="tag">
+                            <!--/* Implements alert summary fragment with full-blown HTML summary */-->
+                            <th:block layout:fragment="alert-content">
+                                <p th:text="${exception}">exception</p>
+                            </th:block>
+                        </div>
+                    </div>
                     <div th:if="${param.error}">
                         Invalid username and password.
                     </div>
