--- a/src/main/resources/templates/insurance_company/edit.html
+++ b/src/main/resources/templates/insurance_company/edit.html
@@ -62,10 +62,11 @@
                         <div class="row">
                             <div class="col-sm-3"> <!--was: -4"-->
                                 <div class="form-group">
-                                    <label for="companyname">Company Name</label>
+                                    <label for="companyName">Company Name</label>
                                     <!-- th:field="*{name}" is de koppeling naar het attribuut 'name' van het object 'member'-->
-                                    <input type="text" class="form-control" id="companyname" th:field="*{companyname}"/>
-                                    <p th:if="${#fields.hasErrors('companyname')}" th:errors="*{companyname}">Name Error</p>
+                                    <input type="text" class="form-control" id="companyname" th:field="*{companyName}"/>
+                                    <p th:if="${#fields.hasErrors('companyName')}" th:errors="*{companyName}">Name
+                                        Error</p>
                                 </div>
                                 <div class="form-group">
                                     <label for="streetname">Street Name</label>
