--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,17 +15,17 @@
     <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
             <!-- User Account: style can be found in dropdown.less -->
-            <li class="dropdown user user-menu" th:if="${session.User != null}">
+            <li class="dropdown user user-menu" th:if="${@UserAdministrationService.getCurrentUser() != null}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <img  th:src="@{~/vendor/AdminLTE/dist/img/user2-160x160.jpg}" class="user-image" alt="User Image" />
-                    <span class="hidden-xs" th:text="${session.User.name}">User</span>
+                    <span class="hidden-xs" th:text="${@UserAdministrationService.getCurrentUser().name}">User</span>
                 </a>
                 <ul class="dropdown-menu">
                     <!-- User image -->
                     <li class="user-header">
                         <img th:src="@{~/vendor/AdminLTE/dist/img/user2-160x160.jpg}" class="img-circle" alt="User Image"/>
 
-                        <p th:text="${session.User.name}">
+                        <p th:text="${@UserAdministrationService.getCurrentUser().name}">
                             User
                         </p>
                     </li>
