--- a/src/main/resources/templates/insurance_company/index.html
+++ b/src/main/resources/templates/insurance_company/index.html
@@ -72,7 +72,7 @@
                         </tr>
                         <tr>
                             <td th:text="${insuranceCompany?.id}"></td>
-                            <td th:text="${insuranceCompany?.companyname}"></td>
+                            <td th:text="${insuranceCompany?.companyName}"></td>
                             <td th:text="${insuranceCompany?.streetname}"></td>
                             <td th:text="${insuranceCompany?.houseNumber}"></td>
                             <td th:text="${insuranceCompany?.zipcode}"></td>
