--- a/src/main/resources/templates/invoice/print.html
+++ b/src/main/resources/templates/invoice/print.html
@@ -86,11 +86,11 @@
                 <table>
                     <tr>
                         <td class="title">
-                            <span th:text="${Company.companyname}"/>
+                            <span th:text="${Company.companyName}"/>
                         </td>
                         <td class="companyInfo">
-                            <span th:text="${Company.companyname}"></span><br>
-                            <span th:text="${Company.companyname} + ' ' + ${Company.houseNumber}"></span><br>
+                            <span th:text="${Company.companyName}"></span><br>
+                            <span th:text="${Company.companyName} + ' ' + ${Company.houseNumber}"></span><br>
                             <span th:text="${Company.zipcode}"></span><br>
                             <span th:text="${Company.phoneNumber}"></span><br>
                             <br>
