--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,16 +19,6 @@
     <link rel="stylesheet" th:href="@{/vendor/Theme/css/skins.min.css}"/>
     <!-- iCheck -->
     <link rel="stylesheet" th:href="@{/vendor/Theme/css/iCheckBlue.css}" />
-    <!-- Morris chart -->
-    <link rel="stylesheet" th:href="@{/vendor/Theme/css/morris.min.css}"/>
-    <!-- jvectormap -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css}"/>
-    <!-- Date Picker -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/datepicker/datepicker3.css}"/>
-    <!-- Daterange picker -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/daterangepicker/daterangepicker.css}"/>
-    <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" th:href="@{/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <style>
@@ -39,14 +29,6 @@
             line-height: 15px;
         }
     </style>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
 
@@ -94,21 +76,8 @@
 <script>
   $.widget.bridge('uibutton', $.ui.button);
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/morris/morris.min.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/sparkline/jquery.sparkline.min.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/jvectormap/jquery-jvectormap-world-mill-en.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/knob/jquery.knob.js}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/daterangepicker/daterangepicker.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/datepicker/bootstrap-datepicker.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/slimScroll/jquery.slimscroll.min.js}"></script>
-<script th:src="@{/vendor/AdminLTE/plugins/fastclick/fastclick.js}"></script>
 <script th:src="@{/vendor/Theme/js/app.min.js}"></script>
 <script th:src="@{/vendor/Theme/js/dashboard.js}"></script>
-<script th:src="@{/vendor/Theme/js/demo.js}"></script>
 <script type="text/javascript" layout:fragment="custom-javascript"></script>
 </body>
 </html>
