Memento met articles!

--- a/src/main/resources/templates/fragments/main-sidebar.html
+++ b/src/main/resources/templates/fragments/main-sidebar.html
@@ -63,7 +63,11 @@
                 <i class="fa fa-newspaper-o"></i> <span>News</span>
             </a>
         </li>
-
+        <li th:class="${page == 'article'} ? 'active' : ''">
+            <a th:href="@{~/article}">
+                <i class="fa fa-newspaper-o"></i> <span>Articles</span>
+            </a>
+        </li>
 
     </ul>
 </section>
